# pypackages

./: .deepsource.toml  .editorconfig  .gitignore  CNAME  Procfile  bandit.yml  clock.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
pypackages/: asgi.py  settings.py  urls.py  wsgi.py
recentactions/: apps.py
recentactions/management/commands/: clean_recent_actions.py
requirements/: base.txt  development.txt  production.txt
snitch/: asgi.py  settings.py  urls.py  wsgi.py
watcher/: admin.py  api.py  apis.py  models.py  resume.py  services.py  urls.py  views.py
watcher/management/commands/: clearpackages.py  clearreleases.py  cleartweets.py  getpackagesinfo.py  getpypiupdates.py  migrate_source_id.py  tweet_releases.py  tweetreleases.py  watch_releases.py
watcher/migrations/: 0001_initial.py  0002_auto_20200403_1243.py  0002_auto_20200405_1151.py  0003_delete_log.py  0004_auto_20200406_1432.py  0005_package_release_regex.py  0006_auto_20200409_2016.py  0007_auto_20200410_1116.py  0008_auto_20200410_1247.py  0009_auto_20200410_2041.py  0010_auto_20200412_1735.py  0011_auto_20200412_1752.py  0012_auto_20200412_1805.py  0013_auto_20200412_1813.py  0014_auto_20200413_1027.py  0015_auto_20200413_2034.py  0016_auto_20200413_2103.py  0017_auto_20200416_1057.py  0018_auto_20200416_1250.py  0019_auto_20200416_1251.py  0020_package_rank.py  0021_auto_20200416_1510.py  0022_package_release_regex.py  0023_auto_20200418_1715.py  0024_auto_20200418_1743.py  0025_auto_20200421_1327.py  0026_delete_release.py  0027_remove_package_stable_regex.py  0028_auto_20200421_2037.py  0029_auto_20200421_2038.py  0030_package_stable_release_regex.py  0031_auto_20200422_2204.py
watcher/sources/: __init__.py  github.py  pypi.py
