[tool.poetry]
name = "pypackages"
version = "1.0.0"
description = "Tweet news releases of selected packages."
authors = ["Hebert <hebertjulio@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.0"
django-model-utils = "^4.0.0"
tweepy = "^3.8.0"
dynaconf = {extras = ["toml"], version = "^2.2.3"}
gunicorn = "^20.0.4"
whitenoise = "^5.0.1"
psycopg2 = "^2.8.4"
apscheduler = "^3.6.3"
requests = "^2.23.0"
xmltodict = "^0.12.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
