[tool.poetry]
name = "pypackages"
version = "1.0.0"
description = "Tweet news releases of selected packages."
authors = ["Hebert <hebertjulio@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "3.0.9"
django-model-utils = "^4.0.0"
tweepy = "^3.8.0"
dynaconf = {extras = ["toml"], version = "^3.0.0"}
gunicorn = "^20.0.4"
whitenoise = "^5.0.1"
psycopg2 = "^2.8.4"
apscheduler = "^3.6.3"
requests = "^2.24.0"
xmltodict = "^0.12.0"
python-dateutil = "^2.8.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pycodestyle = "^2.6.0"
bandit = "^1.6.2"
faker = "^4.1.0"
ipython = "^7.15.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
